Fixed z-index

--- a/src/client/components/DateInput/DateInput.less
+++ b/src/client/components/DateInput/DateInput.less
@@ -2,7 +2,7 @@
   display: inline-flex;
   margin-bottom: 0;
   position: relative;
-  z-index: 999;
+  z-index: 900;
   &::-ms-clear {
     display: none;
   }
@@ -20,7 +20,7 @@
   overflow: hidden;
   position: absolute;
   top: 40px;
-  z-index: 9999;
+  z-index: 900;
 }
 
 .opuscapita_date-input__picker-container:focus {
@@ -40,6 +40,6 @@
 .opuscapita_date-input__reset-btn {
   position: absolute;
   top: 0;
-  right: 0;
+  right: 1ch;
   z-index: 3;
 }
