--- a/src/client/components/DatePicker/DatePicker.less
+++ b/src/client/components/DatePicker/DatePicker.less
@@ -14,7 +14,7 @@
   overflow: hidden;
   position: absolute;
   transform: translate(0, 100%);
-  z-index: 9999;
+  z-index: 900;
 }
 
 .opuscapita_date-picker__picker-container:focus {
