--- a/src/client/components/DateRangeInput/DateRangeInput.less
+++ b/src/client/components/DateRangeInput/DateRangeInput.less
@@ -11,7 +11,7 @@
   left: 0;
   overflow: hidden;
   position: absolute;
-  z-index: 9999;
+  z-index: 900;
 }
 
 .opuscapita_date-range-input__picker-container:focus {
@@ -41,7 +41,7 @@
   right: 0;
   overflow: hidden;
   position: absolute;
-  z-index: 9999;
+  z-index: 900;
 }
 
 .opuscapita_date-range-input__variants-container--to-top {
@@ -55,8 +55,10 @@
   right: 1ch;
 }
 
+.opuscapita_date-range-input__input-field-container {
+  position: relative;
+}
+
 .opuscapita_date-range-input__variants-btn {
-  position: absolute;
-  top: 0;
-  right: 4ch;
+  border-left: none;
 }
